--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,27 @@
 # *.ipch
 # *.vcxproj
 # *.vcxproj.user
+
+# Created by https://www.gitignore.io/api/django
+
+### Django ###
+*.log
+*.pot
+*.pyc
+*.swp
+__pycache__/
+local_settings.py
+db.sqlite3
+media
+*/migrations/00*
+*/migrations/__pycache__
+*/static/img/*
+*/static/uploads/*
+*.swo
+
+# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
+# in your Git repository. Update and uncomment the following line accordingly.
+# <django-project-name>/staticfiles/
+
+
+# End of https://www.gitignore.io/api/django
