--- a/DomiSolConverter/DomiSolConverter/DomiSolConverter.vcxproj
+++ b/DomiSolConverter/DomiSolConverter/DomiSolConverter.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="DomiSolConverter.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Symbol.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Analysis.cpp" />
@@ -178,6 +179,7 @@
     </ClCompile>
     <ClCompile Include="Postprocessing.cpp" />
     <ClCompile Include="Preprocessing.cpp" />
+    <ClCompile Include="Symbol.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
