--- a/DomiSolConverter/DomiSolConverter/DomiSolConverter.vcxproj.filters
+++ b/DomiSolConverter/DomiSolConverter/DomiSolConverter.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Symbol.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Signature.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -45,6 +48,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Symbol.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Signature.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
